Fixed Spacing Issue hopfuly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,31 @@ a {
     color-scheme: dark;
   }
 }
+
+.ANEWDIV {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: fit-content;
+  gap: 10px;
+}
+
+.ANEWDIV  #message {
+  width: 100%;
+  padding: 1rem;
+  padding-top: 20px;
+  word-wrap: break-word;
+  height: 5rem;
+}
+
+.ANEWDIV #roundinfo {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 3;
+  justify-content: space-evenly;
+}
+
+
+
+
